# elite-secretary

./: .gitignore  README.md  design.md  llm_credit_dataset_design.md  pyproject.toml  requirements.md  skills-lock.json  tasks.md
.github/agents/: analytics-reporting.agent.md  foundation-orchestrator.agent.md  integrations-connector.agent.md  qa-demo-validation.agent.md
data/seed/: employee_llm_credit_usage.csv  employee_llm_credit_usage.sql
scripts/: generate_llm_credit_db.py  run_workflow.sh
src/agents/: agent_a_intent.py  agent_b_aggregation.py  agent_c_excel.py  agent_d_insight.py
src/app/: config.py  main.py
src/domain/: errors.py  models.py
src/integrations/: audio_preprocessor.py  graph_client.py  sharepoint_publisher.py  speech_stt.py  teams_notifier.py  teams_recording_resolver.py
src/llm_financial_workflow/: __init__.py  cli.py  config.py  graph.py  install_excel_mcp.py  logging_utils.py  nodes.py  schemas.py
src/llm_financial_workflow/services/: __init__.py  data_service.py  excel_mcp_service.py  insight_service.py
src/pipeline/: orchestrator.py  state_store.py
tests/: test_integrations_t020_t022.py
