[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "llm-financial-workflow"
version = "0.1.0"
description = "LangGraph workflow for FR4-FR11 financial reporting automation."
requires-python = ">=3.11"
dependencies = [
  "langchain>=0.3.0",
  "langchain-openai>=0.3.0",
  "langchain-mcp-adapters>=0.2.1",
  "langgraph>=0.2.0",
  "pydantic>=2.8.0",
  "python-dotenv>=1.0.1",
  "typing-extensions>=4.12.0",
]

[project.scripts]
llm-financial-workflow = "llm_financial_workflow.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
